# commerce_tool

./: Cargo.toml  README.md  application.yaml
commerce_cache/: Cargo.toml
commerce_cache/src/redis/: cache_service.rs  mod.rs  redis_service.rs
commerce_command/: Cargo.toml
commerce_command/src/: lib.rs
commerce_command/src/utils/: mod.rs  taobao.rs
commerce_config/: Cargo.toml
commerce_config/src/: lib.rs
commerce_crawler/: Cargo.toml
commerce_devtools/: Cargo.toml
commerce_domain/: Cargo.toml
commerce_domain/src/: lib.rs
commerce_domain/src/dto/: mod.rs  sys_role_dto.rs
commerce_domain/src/entity/: mod.rs  sys_entitys.rs  user_entity.rs
commerce_domain/src/request/: mod.rs
commerce_domain/src/vo/: jwt.rs  mod.rs  sign_in.rs  wechat.rs
commerce_orm/: Cargo.toml
commerce_orm/src/: lib.rs
commerce_orm/src/dao/: mod.rs
commerce_sms/: Cargo.toml
commerce_storage/: Cargo.toml
commerce_tests/: Cargo.toml
commerce_web/: Cargo.toml
commerce_web/src/: lib.rs  main.rs
commerce_web/src/api/: mod.rs  user_resource.rs  wechat_resource.rs
commerce_web/src/config/: log.rs
commerce_web/src/initialize/: config.rs
commerce_web/src/routers/: api.rs
commerce_web/src/service/api/: user_service.rs
commerce_web/src/service/wechat/: mod.rs
commerce_wechat/: Cargo.toml
