[package]
name = "commerce_config"
version = "0.1.0"
edition = "2021"
author = "fieldlee<249608904@qq.com>"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
serde_yaml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
getset = "0.1.2"