[package]
name = "commerce_web"
version = "0.1.0"
edition = "2021"
author = "fieldlee<249608904@qq.com>"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.17",features=["multipart","ws"]}
tokio = {version = "1.21.2",features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4",features=["cors"] }
serde = "1.0.147"
serde_json = "1.0.87"
chrono = "0.4.23"  #time and date
lazy_static ="1.4.0"
#对象存储
state = { version = "0.5.3", features = ["tls"] }
#缓存 支持redis 本地缓存
cached = {version="0.34.0",features = ["redis_store","redis_async_std","async"]}
#log
log = "0.4"
fast_log = { version="1.5.1", features = ["lz4","zip", "gzip"]}
#commerce 配置类定义
commerce_config = { path = "../commerce_config" }
#commerce 配置类定义
commerce_command = { path = "../commerce_command" }